# qgroundcontrol_custom

./: CMakeLists.txt  qgroundcontrol.qrc
.github/workflows/: macos.yml
cmake/: FindGStreamer.cmake
src/: QGCApplication.cc  QGCToolbox.cc  QGCToolbox.h
src/AnalyzeView/: CMakeLists.txt  ExifParser.cc  ExifParser.h  GeoTagController.cc  GeoTagController.h  GeoTagPage.qml  GeoTagWorker.cc  GeoTagWorker.h
src/AutoPilotPlugins/APM/: APMAutoPilotPlugin.cc
src/AutoPilotPlugins/PX4/: PX4AutoPilotPlugin.cc
src/Comms/: LinkInterface.h  LinkManager.cc  LinkManager.h  LogReplayLink.cc  LogReplayLink.h  SerialLink.cc  SerialLink.h  UDPLink.cc
src/FirmwarePlugin/: FirmwarePlugin.cc
src/GPS/: GPSManager.cc  GPSProvider.cc  GPSProvider.h  RTCMMavlink.cc  RTCMMavlink.h  satellite_info.h  sensor_gnss_relative.h  sensor_gps.h
src/QmlControls/: QGroundControlQmlGlobal.cc  QGroundControlQmlGlobal.h
src/QtLocationPlugin/: CMakeLists.txt  QGCCachedTileSet.cpp  QGCMapEngine.cpp  QGCMapEngine.h  QGCMapUrlEngine.cpp  QGCTileCacheDatabase.cpp  QGCTileCacheDatabase.h  QGCTileCacheWorker.cpp  QGCTileCacheWorker.h  QGeoFileTileCacheQGC.cpp  QGeoFileTileCacheQGC.h  QGeoMapReplyQGC.cpp  QGeoMapReplyQGC.h  QGeoServiceProviderPluginQGC.cpp  QGeoServiceProviderPluginQGC.h  QGeoTileFetcherQGC.cpp  QGeoTileFetcherQGC.h  QGeoTiledMapQGC.cpp  QGeoTiledMappingManagerEngineQGC.cpp  QGeoTiledMappingManagerEngineQGC.h
src/QtLocationPlugin/Providers/: ElevationMapProvider.h
src/QtLocationPlugin/QMLControl/: QGCMapEngineManager.cc  QGCMapEngineManager.h
src/Terrain/Providers/: TerrainQueryArduPilot.cc
src/VideoManager/: VideoManager.cc
src/VideoManager/VideoReceiver/GStreamer/: CMakeLists.txt  GStreamer.cc  GStreamer.h  gst_ios_init.h  gst_ios_init.m  gstqgc.c
src/VideoManager/VideoReceiver/GStreamer/gstqml6gl/: CMakeLists.txt
src/VideoManager/VideoReceiver/QtMultimedia/: CMakeLists.txt  UVCReceiver.cc
test/AnalyzeView/: CMakeLists.txt  GeoTagControllerTest.cc
test/GPS/: GpsTest.cc  GpsTest.h
tools/setup/: install-dependencies-debian.sh
